[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/button.theme" type="Theme" id=1]
[ext_resource path="res://Graphics/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/WorldSelect.gd" type="Script" id=3]

[node name="WorldSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.223529, 0.25098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 25.0
margin_right = -50.0
margin_bottom = -25.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 860.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 2 )
text = "Select Level"
align = 1

[node name="WorldButtonContainer" type="GridContainer" parent="VBoxContainer"]
margin_left = 205.0
margin_top = 137.0
margin_right = 655.0
margin_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
custom_constants/vseparation = 25
custom_constants/hseparation = 50
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World1Button" type="Button" parent="VBoxContainer/WorldButtonContainer"]
margin_left = -1.0
margin_right = 199.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "World 1"

[node name="World2Button" type="Button" parent="VBoxContainer/WorldButtonContainer"]
margin_left = 249.0
margin_right = 449.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "World 2"

[node name="World3Button" type="Button" parent="VBoxContainer/WorldButtonContainer"]
margin_left = -1.0
margin_top = 75.0
margin_right = 199.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "World 3"

[node name="World4Button" type="Button" parent="VBoxContainer/WorldButtonContainer"]
margin_left = 249.0
margin_top = 75.0
margin_right = 449.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "World 4"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_left = 330.0
margin_top = 312.0
margin_right = 530.0
margin_bottom = 362.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/WorldButtonContainer/World1Button" to="." method="_on_World1Button_pressed"]
[connection signal="pressed" from="VBoxContainer/WorldButtonContainer/World2Button" to="." method="_on_World2Button_pressed"]
[connection signal="pressed" from="VBoxContainer/WorldButtonContainer/World3Button" to="." method="_on_World3Button_pressed"]
[connection signal="pressed" from="VBoxContainer/WorldButtonContainer/World4Button" to="." method="_on_World4Button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
